<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AudioGPSTracker</string>

    <string name="action_settings">Settings</string>
    <string name="title_kmph">Km/h</string>
    <string name="title_mph">miles/h</string>
    <string name="title_knots">Knots</string>
    <string name="title_mps">m/s</string>
    <string name="nil">000</string>
    <string name="gps_nil">GPS speed: 000</string>
    <string name="gps_formula_nil">GPS speed (formula): 000</string>
    <string name="gps_speed">GPS speed:</string>
    <string name="gps_speed_formula">GPS speed (formula):</string>
    <string name="acc_speed">ACC speed:</string>
    <string name="direction">Compass:</string>
    <string name="no_accelerometer">Unable to detect acceleration</string>
    <string name="no_direction">Unable to detect direction changes</string>
    <string name="sattelites">Sattelites:</string>
    <string name="accuracy">Accuracy:</string>
    
    <string name="gps_dialog_message">Your GPS seems to be disabled, do you want to enable it?</string>
    <string name="gps_dialog_positive_button">Enable</string>
    <string name="gps_dialog_negative_button">Cancel</string>
    
    
</resources>
