<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/firstFragm"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:gravity="center|fill"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.audiogpstracker.MainActivity$PlaceholderFragment" >

    <TextView
        android:id="@+id/debug_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/gps_status"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/gps_sat"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" 
            android:visibility="gone">

            <TextView
                android:id="@+id/sat_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/sattelites"
                android:textSize="@dimen/value_font_size" />

            <TextView                
                android:id="@+id/accuracy_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/accuracy"
                android:textSize="@dimen/value_font_size"  />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gps"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_nil"
                android:textSize="@dimen/value_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gps2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left|center"
            android:orientation="horizontal"
            android:visibility="gone"
             >

            <TextView
                android:id="@+id/speed2_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gps_formula_nil"
                android:textSize="@dimen/value_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/acc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gps2"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" >

            <TextView
                android:id="@+id/accTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/acceleration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/accTitle"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/nil"
                android:textSize="@dimen/value_font_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dir"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/gps"
            android:gravity="left|center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/directionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/directionTitle"
                android:gravity="center_vertical|center_horizontal"
                android:text="@string/nil"
                android:textSize="@dimen/value_font_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/dir"
            android:gravity="center"
            android:orientation="vertical" >

            <ToggleButton
                android:id="@+id/dmafSnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DMAF" />

            <Button
                android:id="@+id/clearAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="clear max acceleration"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>